<resources>
    <string name="title_activity_dagger">DaggerActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Faker哔哩</string>

    <!-- Common -->
    <string name="charge_loading">加载中...</string>
    <string name="charge_no_data_tips">╮(╯3╰)╭再怎么找也没有啦</string>
    <string name="upper_load_failed_with_click">加载失败,请点击重新尝试</string>
    <string name="tips_load_error">加载失败了Σ(OДO</string>
    <string name="section_region">分区</string>

    <!-- Main -->
    <string name="section_home">首页</string>
    <string name="section_dynamic">动态</string>
    <string name="section_message">消息</string>

    <!-- Home -->
    <string name="home_top_default_nickname">未登录</string>
    <string name="menu_top_download_tips">离线列表</string>
    <string name="menu_top_search_tips">搜索</string>
    <string name="nav_offline_manager">离线缓存</string>
    <string name="section_bangumi">追番</string>
    <string name="section_discover">发现</string>
    <string name="section_live">直播</string>
    <string name="section_movie">影视</string>
    <string name="section_special_column">专栏</string>
    <string name="section_recommend">推荐</string>
    <string name="title_game">游戏中心</string>

    <!-- Live -->
    <string name="nav_et_search">搜索房间或主播</string>
    <string name="nav_follow">关注</string>
    <string name="nav_center">中心</string>
    <string name="nav_entertainment">娱乐</string>
    <string name="nav_video">小视频</string>
    <string name="nav_game">游戏</string>
    <string name="nav_mobile_game">手游</string>
    <string name="nav_search">搜索</string>
    <string name="nav_category">分类</string>
    <string name="nav_painting">绘画</string>
    <string name="partition_count_format">当前%1$s个直播，进去看看</string>
    <string name="live_load_more">查看更多</string>
    <string name="live_more_live">更多直播</string>
    <string name="live_more">更多</string>
    <string name="live_share">分享</string>
    <string name="live_report">举报</string>
    <string name="live_interaction">互动</string>
    <string name="live_ranking_list">排行榜</string>
    <string name="live_fleet">舰队</string>
    <string name="live_friendly_society">友爱社</string>
    <string name="live_click_refresh">点击换一批</string>
    <string name="live_play_add_attention">+关注</string>
    <string name="live_play_up">UP</string>

    <!-- Navigation -->
    <string name="nav_login">点击头像登录</string>
    <string name="nav_home">首页</string>
    <string name="nav_vip">我的大会员</string>
    <string name="nav_vip_point">我的大会员</string>
    <string name="nav_unicom">免流量服务</string>
    <string name="nav_download">离线缓存</string>
    <string name="nav_view_later">稍后再看</string>
    <string name="nav_star">我的收藏</string>
    <string name="nav_history">历史记录</string>
    <string name="nav_people">我的关注</string>
    <string name="nav_account_balance_wallet">B币钱包</string>
    <string name="nav_color_lens">主题选择</string>
    <string name="nav_settings">设置与帮助</string>

    <!-- Bangumi -->
    <string name="bangumi_common_section_header_recommend">番剧推荐</string>
    <string name="bangumi_follow_section_header_more">查看更多</string>
    <string name="bangumi_follow_section_header_recommend_domestic">国产动画推荐</string>
    <string name="bangumi_follow_section_header_recommend_editor">编辑推荐</string>
    <string name="bangumi_index_all_title">索引</string>
    <string name="bangumi_index_status_format_1">更新至%s</string>
    <string name="bangumi_index_status_format_2">全%s话</string>
    <string name="bangumi_index_status_format_3">更新至第%s话</string>
    <string name="bangumi_index_text_suffix_hit">%s人追番</string>
    <string name="bangumi_timeline_title">时间表</string>

    <!-- Recommend -->
    <string name="index_feed_recommend">综合</string>

    <!--Region-->
    <string name="go_into">进去看看</string>
    <string name="live">直播</string>
    <string name="bangumi">番剧</string>
    <string name="animation">动画</string>
    <string name="guo_chuang">国创</string>
    <string name="music">音乐</string>
    <string name="dancing">舞蹈</string>
    <string name="game">游戏</string>
    <string name="technology">科技</string>
    <string name="life">生活</string>
    <string name="gui_chu">鬼畜</string>
    <string name="fashion">时尚</string>
    <string name="advertisement">广告</string>
    <string name="entertainment">娱乐</string>
    <string name="movie">电影</string>
    <string name="tv_play">电视剧</string>
    <string name="game_center">游戏中心</string>
    <string name="more_format">更多%s</string>
</resources>
